<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/laonpics"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="100dp"/>
    <EditText
        android:id="@+id/etPrincipal"
        android:hint="@string/hintPrincipal"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edDuration"
        android:hint="@string/hintDuration"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edAnnualInterestRate"
        android:hint="@string/hintAnnualInterestRate"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnCalculator"
        android:textSize="24sp"
        android:text="@string/txtButton"
        android:textColor="@color/orange"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layoutDirection="rtl"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/textPayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvMonthlyPayment"
            android:textSize="20sp"
            android:text="پیش فرض"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layoutDirection="rtl"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/textInterest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvTotalInterest"
            android:textSize="20sp"
            android:text="پیش فرض"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layoutDirection="rtl"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/textRepayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvRepayment"
            android:textSize="20sp"
            android:text="پیش فرض"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>